<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <!-- Home Dashboard Screen -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.oid.crash.ui.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <!-- Target App Selection Screen -->
    <fragment
        android:id="@+id/nav_targets"
        android:name="com.oid.crash.ui.TargetAppsFragment"
        android:label="@string/nav_targets"
        tools:layout="@layout/fragment_target_apps" />

    <!-- Crash Reports History Screen -->
    <fragment
        android:id="@+id/nav_history"
        android:name="com.oid.crash.ui.HistoryFragment"
        android:label="@string/nav_history"
        tools:layout="@layout/fragment_history" />

    <!-- Settings / ADB Configuration Screen -->
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.oid.crash.ui.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>